# psp-rizin-scripts

./: .gitignore  .gitmodules  Cargo.toml  README.md  hello.txt
rizin-librz-sys/: Cargo.toml  build.rs
rz-psp/: Cargo.toml
rz-psp-resolve-nid/: Cargo.toml
rz-psp-resolve-nid/src/: lib.rs
rz-psp/assets/: niddb_combined.xml  pspsdk_types.h
rz-psp/src/: lib.rs  types.rs
testfiles/: psp-hello-world-example.prx  usbgps.prx
