[package]
name = "rz-psp-resolve-nid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cmd_psp_resolve_nid"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.153"
rizin-librz-sys = { path = "../rizin-librz-sys" }
