[package]
name = "rz-psp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rz_psp_core"
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive", "extern_crate_alloc"] }
libc = "0.2.153"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
rizin-librz-sys = { path = "../rizin-librz-sys" }
serde = { version = "1.0.197", features = ["serde_derive"] }
